--- a/style.css
+++ b/style.css
@@ -15,14 +15,9 @@ h2 {
     color: orangered;
 }
 
-section {
-    display: flex;
-    margin-bottom: 50px;
-}
-
 .flexible-container {
     display: flex;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .half-width {
@@ -33,6 +28,7 @@ section {
 
 .half-width img {
     width: 20%;
+    display: flex;
 }
 
 .link-button {
@@ -56,12 +52,12 @@ section {
 }
 
 .half-width {
-    width: 50%;
+    width: 40%;
     padding-left: 2%;
 }
 
 .half-width img {
-    width: 50%;
+    width: 40%;
 }
 
 .experiences {
@@ -69,29 +65,36 @@ section {
     margin-bottom: 100px;
 }
 
-.experience-area {
+.recipe-area {
     background-image: url(image/exp-bg.png);
     background-repeat: no-repeat;
-    background-position: left;
+    background-position: center;
+    text-align: center;
 }
 
 .experience-item {
-    width: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
+    width: 100%;
+    height: auto;
+    margin-left: 2%;
+    margin-right: 2%;
     padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
     border-radius: 10px;
-    box-shadow: 10px 10px 30px gray;
+    box-shadow: 5px 5px 5px 5px gray;
+}
+
+.recipe-main {
+    display: flex;
+    justify-content: center;
 }
 
 #recipe-title {
     border-left: 7px solid gray;
+    text-align: left;
 }
 
 #recipe-titles {
     border-left: 7px solid gray;
-}
-
-footer p {
-    text-align: center;
+    text-align: left;
 }
