--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h2 {
 }
 
 .half-width img {
-    width: 20%;
+    width: 50%;
     display: flex;
 }
 
@@ -53,7 +53,7 @@ h2 {
 
 .half-width {
     width: 40%;
-    padding-left: 2%;
+    padding-left: 4%;
 }
 
 .half-width img {
@@ -97,4 +97,35 @@ h2 {
 #recipe-titles {
     border-left: 7px solid gray;
     text-align: left;
+}
+
+.card1 {
+    display: flex;
+    border-radius: 10px;
+    background-position: center;
+    font-size: 20px;
+    width: 100px;
+    height: auto;
+    padding-left: 70%;
+    padding-right: 70%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    box-shadow: 5px 5px 5px 5px gray;
+
+}
+
+.youtube {
+    text-align: left;
+    padding-right: 200px;
+    margin-right: 2%;
+}
+
+.facebook {
+    text-align: center;
+}
+
+.instagram {
+    text-align: right;
+    padding-left: 200px;
+    margin-left: 2%;
 }
